<resources>
    <string name="app_name">SpotCheck</string>
    <string name="action_cancel">取消</string>
    <string name="action_confirm">确定</string>
    <string name="main_home">首页</string>
    <string name="main_spotcheck">点检信息</string>
    <string name="main_lubrication">润滑信息</string>
    <string name="main_mine">我的</string>
    <string name="username">登录名</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="login_bottom_1">©2019 - 2020 All Rights Reserved.</string>
    <string name="login_bottom_2">公司名称 大连海峤科技有限公司</string>
    <string name="home_work">工作台</string>
    <string name="home_check">设备点检</string>
    <string name="home_pro">巡查问题</string>
    <string name="home_lub">设备润滑</string>
    <string name="check">点检</string>
    <string name="home_nocheck">未完成的点击部位</string>
    <string name="home_check_plan">最近需进行点检的计划</string>
    <string name="home_daji">大机:</string>
    <string name="home_check_place">点检部位:</string>
    <string name="home_wait_event">代办事项</string>
    <string name="lub">润滑</string>
    <string name="item_check_place">部位:</string>
    <string name="item_check_plan">计算点检时间:</string>
    <string name="plan_lub_time">计划润滑时间</string>
    <string name="item_lub_place">润滑部位</string>
    <string name="item_lub_time">润滑时间</string>
    <string name="scan_check">设备点检项目</string>
    <string name="home_nolub">未完成的润滑部位</string>
    <string name="home_lub_plan">最近需进行润滑的计划</string>
    <string name="home_lub_place">润滑部位:</string>
</resources>
