<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_67"
        android:background="@drawable/logo"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_et_bg"
        android:layout_below="@id/iv_logo"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_44"
        android:layout_marginRight="@dimen/dp_44"
        android:hint="@string/username"
        android:textSize="@dimen/sp_15"
        android:textColor="#AAAAAA"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:paddingTop="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_15"
        android:lines="1"
        />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_et_bg"
        android:layout_below="@id/et_username"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginLeft="@dimen/dp_44"
        android:layout_marginRight="@dimen/dp_44"
        android:hint="@string/pwd"
        android:textSize="@dimen/sp_15"
        android:textColor="#AAAAAA"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:paddingTop="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_15"
        android:lines="1"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:layout_below="@id/et_pwd"
        android:layout_marginTop="@dimen/dp_29"
        android:layout_marginLeft="@dimen/dp_44"
        android:layout_marginRight="@dimen/dp_44"
        android:background="@drawable/login_btn_bg"
        />

    <TextView
        android:id="@+id/tv_b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_bottom_1"
        android:textSize="@dimen/sp_11"
        android:textColor="#99A3AC"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_34"
        />

    <TextView
        android:id="@+id/tv_b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_bottom_2"
        android:textSize="@dimen/sp_11"
        android:textColor="#99A3AC"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/tv_b1"
        android:layout_marginBottom="@dimen/dp_6"
        />
</RelativeLayout>