<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/homebg" />

    <RelativeLayout
        android:id="@+id/lay_home1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/home_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/home_logo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_logo"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            app:cardCornerRadius="@dimen/dp_22">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/lay_work"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view_ver"
                        android:layout_width="@dimen/dp_5"
                        android:layout_height="@dimen/dp_17"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16"
                        android:background="@drawable/home_ver_shape" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_marginTop="@dimen/dp_14"
                        android:text="@string/home_work"
                        android:textColor="#1F1F1F"
                        android:textSize="@dimen/sp_17" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lay_work"
                    android:layout_marginTop="@dimen/dp_25"
                    android:layout_marginBottom="@dimen/dp_22"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/iv_home_check"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/home_dianjian"
                        android:drawablePadding="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/home_check"
                        android:textColor="#515151"
                        android:textSize="@dimen/dp_14" />

                    <TextView
                        android:id="@+id/iv_home_setpro"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/home_xunjian"
                        android:drawablePadding="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/home_pro"
                        android:textColor="#515151"
                        android:textSize="@dimen/dp_14" />

                    <TextView
                        android:id="@+id/iv_home_lub"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/home_ruanhua"
                        android:drawablePadding="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/home_lub"
                        android:textColor="#515151"
                        android:textSize="@dimen/dp_14" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lay_check_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_home1"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_8"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/dp_5"
            android:layout_height="@dimen/dp_17"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_16"
            android:background="@drawable/home_ver_shape" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_5"
            android:text="@string/home_wait_event"
            android:textColor="#1F1F1F"
            android:textSize="@dimen/sp_17" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lay_check_title"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/lay_check_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_8"
                android:background="@drawable/home_top_shape"
                android:padding="@dimen/dp_1"

                >

                <LinearLayout
                    android:id="@+id/lay_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/home_top_shape1"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_13"
                    android:paddingTop="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_12">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/check"
                        android:textColor="#1F1F1F"
                        android:textSize="@dimen/sp_19" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/home_nocheck"
                        android:textColor="#1F1F1F"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/home_check_noNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp_8"
                        android:layout_marginRight="@dimen/dp_15"
                        android:background="@drawable/home_shape_spot"
                        android:padding="@dimen/dp_5"
                        android:textColor="#EFF1F4"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay_plan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lay_check"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_13"
                    android:paddingTop="@dimen/dp_13"
                    android:paddingRight="@dimen/dp_13"
                    android:paddingBottom="@dimen/dp_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_check_plan"
                        android:textColor="#9E9E9E"
                        android:textSize="@dimen/sp_12" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/home_plan_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#1F1F1F"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay_daji"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lay_plan"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_13"
                    android:paddingRight="@dimen/dp_13">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_daji"
                        android:textColor="#515151"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_daji"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#1F1F1F"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay_check_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lay_daji"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_13"
                    android:paddingRight="@dimen/dp_13"
                    android:paddingBottom="@dimen/dp_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_check_place"
                        android:textColor="#515151"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_checnk_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#1F1F1F"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
            </RelativeLayout>

            <!--    /////////////////////////////////////////////////////////////////////////////////-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lay_check_card"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_8"
                android:background="@drawable/home_top_shape"
                android:padding="@dimen/dp_1">

                <LinearLayout
                    android:id="@+id/lay_lub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/home_top_shape2"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_13"
                    android:paddingTop="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_12">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/lub"
                        android:textColor="#1F1F1F"
                        android:textSize="@dimen/sp_19" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/home_nocheck"
                        android:textColor="#1F1F1F"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/home_lub_noNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp_8"
                        android:layout_marginRight="@dimen/dp_15"
                        android:background="@drawable/home_shape_spot"
                        android:padding="@dimen/dp_5"
                        android:textColor="#EFF1F4"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay_lub_plan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lay_lub"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_13"
                    android:paddingTop="@dimen/dp_13"
                    android:paddingRight="@dimen/dp_13"
                    android:paddingBottom="@dimen/dp_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_check_plan"
                        android:textColor="#9E9E9E"
                        android:textSize="@dimen/sp_12" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/home_plan_lub_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#1F1F1F"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay_lub_daji"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lay_lub_plan"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_13"
                    android:paddingRight="@dimen/dp_13">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_daji"
                        android:textColor="#515151"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_lub_daji"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#1F1F1F"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay_lub_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lay_lub_daji"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_13"
                    android:paddingRight="@dimen/dp_13"
                    android:paddingBottom="@dimen/dp_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_check_place"
                        android:textColor="#515151"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_lub_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#1F1F1F"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>