<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_15">

    <RelativeLayout
        android:id="@+id/lay_check_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_8"
        android:background="@drawable/home_top_shape_orange"
        android:padding="@dimen/dp_1">

        <LinearLayout
            android:id="@+id/lay_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/home_top_shape2"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_13"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#1F1F1F"
                android:textSize="@dimen/sp_19" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/dp_14"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/plan_lub_time"
                    android:textColor="#515151"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/tv_plan_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#1F1F1F"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lay_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/lay_check"
            android:paddingLeft="@dimen/dp_13"
            android:paddingRight="@dimen/dp_13"
            android:paddingBottom="@dimen/dp_16"
            android:paddingTop="@dimen/dp_10"
            >
            <LinearLayout
                android:id="@+id/lay_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_lub_place"
                    android:textColor="#515151"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_lub_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:textColor="#1F1F1F"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_check_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_lub_time"
                    android:textColor="#515151"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_lub_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:textColor="#1F1F1F"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_alignTop="@id/lay_part"
            android:layout_alignBottom="@id/lay_part"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_over"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="已完成"
                android:textColor="#515151"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_wait_lub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="待润滑"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                android:background="@drawable/lub_blue_shape"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>